styles/header.css
.header {
  height: 55px;
  display: flex;
  justify-content: space-between;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 100;
  background-color: white;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: rgb(230, 230, 230); 
}

.left-section {
  display: flex;
  align-items: center;
}

.hamburger-menu {
  height: 24px;
  margin-left: 24px;
  margin-right: 24px;
}

.youtube-logo {
  height: 20px;
}

.middle-section {
  flex: 1;
  margin-left: 66px;
  margin-right: 35px;
  max-width: 470px;
  display: flex;
  align-items: center;
}

.search-bar {
  flex: 1;
  height: 36px;
  padding: 1px 2px 1px 12px;
  font-size: 16px;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(194, 194, 194);
  border-radius: 2px;
  box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
  width: 0;
}

.search-bar::placeholder {
  font-family: Roboto, Arial;
  font-size: 16px;
}

.search-button {
  height: 40px;
  width: 66px;
  background-color: whitesmoke;
  border-width: 1px;
  border-style: solid;
  border-color:rgb(194, 194, 194);
  margin-left: -1px;
  margin-right: 8px;
}

.search-button,
.voice-search-button {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.search-button .tooltip,
.voice-search-button .tooltip {
  position: absolute;
  background-color: gray;
  color: white;
  padding: 4px 8px;
  border-radius: 2px;
  font-size: 12px;
  bottom: -30px;
  opacity: 0;
  transition: opacity 200ms;
  pointer-events: none;
  white-space: nowrap;
}

.search-button:hover .tooltip,
.voice-search-button:hover .tooltip {
  opacity: 0.9;
}

.search-icon {
  height: 25px;
}

.voice-search-button {
  height: 40px;
  width: 40px;
  border-radius: 100px;
  border: none;
  background-color: whitesmoke;
}

.voice-search-icon {
  height: 24px;
}

.right-section {
  width: 182px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-right: 24px;
  flex-shrink: 0;
}

.upload-icon {
  height: 24px;
}

.youtube-apps-icon {
  height: 24px;
}

.notifications-icon {
  height: 24px;
}

.notifications-icon-container {
  position: relative;
}

.notifications-count {
  position: absolute;
  top: -2px;
  right: -5px;
  background-color: rgb(199, 0, 0);
  color: white;
  font-family: Roboto, Arial;
  font-size: 10px;
  padding: 2px 5px;
  border-radius: 100px;
}

.current-user-picture {
  height: 32px;
  border-radius: 100px;
}

